--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js"
+    "start": "pm2 stop index.js && pm2 start index.js --watch"
   },
   "repository": {
     "type": "git",
