--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://gitlab.com/mark.adel/fiveinarow-server#readme",
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.9.2",
