--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 stop index.js && pm2 start index.js"
+    "start": "pm2 start index.js",
+    "restart": "pm2 restart index.js"
   },
   "repository": {
     "type": "git",
