--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-PROJECT_ID=
-CLIENT_EMAIL=
-DATABASEURL=
-PRIVATE_KEY=
-DATABASE_AUTH_VARIABLE_OVERRIDE=
+DATABASEURL=https://fiveinarow-4a16b.firebaseio.com
+GOOGLE_APPLICATION_CREDENTIALS=./fiveinarow-4a16b-firebase-adminsdk-s2xsv-607e50ced5.json
