add port to environment

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASEURL=https://fiveinarow-4a16b.firebaseio.com
-GOOGLE_APPLICATION_CREDENTIALS=./fiveinarow-4a16b-firebase-adminsdk-s2xsv-607e50ced5.json
+PORT=
+DATABASEURL=
+GOOGLE_APPLICATION_CREDENTIALS=
